--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,6 +2,7 @@
 ---
 @misc{handina2024understandingmodelselectionlearning,
       bibtex_show={true},
+      selected={true},
       title={Understanding Model Selection For Learning In Strategic Environments}, 
       author={Tinashe Handina and Eric Mazumdar},
       year={2024},
