Changes part final today

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,7 +1,6 @@
 ---
 ---
 @misc{handina2024understandingmodelselectionlearning,
-      bibtex_show={true},
       selected={true},
       title={Understanding Model Selection For Learning In Strategic Environments}, 
       author={Tinashe Handina and Eric Mazumdar},
@@ -10,6 +9,7 @@
       archivePrefix={arXiv},
       primaryClass={cs.GT},
       url={https://arxiv.org/abs/2402.07588}, 
+      pdf={https://arxiv.org/abs/2402.07588},
 }
 
 @InProceedings{pmlr-v178-christianson22a,
