--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -13,6 +13,7 @@
 }
 
 @InProceedings{pmlr-v178-christianson22a,
+  selected={true},
   title = 	 {Chasing Convex Bodies and Functions with Black-Box Advice},
   author =       {Christianson, Nicolas and Handina, Tinashe and Wierman, Adam},
   booktitle = 	 {Proceedings of Thirty Fifth Conference on Learning Theory},
@@ -29,6 +30,7 @@
 }
 
 @inproceedings{Sehwag2021RobustLM,
+  selected={true},
   title={Robust Learning Meets Generative Models: Can Proxy Distributions Improve Adversarial Robustness?},
   author={Vikash Sehwag and Saeed Mahloujifar and Tinashe Handina and Sihui Dai and Chong Xiang and Mung Chiang and Prateek Mittal},
   booktitle={International Conference on Learning Representations},
