--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -36,3 +36,12 @@
   year={2021},
   url={https://api.semanticscholar.org/CorpusID:237940634}
 }
+
+@mastersthesis{random_walk_extensive_games,
+  author       = {Tinashe Handina},
+  title        = {A Random Walk in Extensive Form Games: An Investigation into Information, Strategy-Proofness, and Credibility},
+  school       = {Princeton University},
+  year         = {2021},
+  type         = {Undergraduate Thesis},
+  url          = {http://arks.princeton.edu/ark:/88435/dsp01n870zt92k}
+}
