--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -12,6 +12,17 @@
       pdf={https://arxiv.org/abs/2402.07588},
 }
 
+@misc{LiSafeExploitative2024,
+      selected={true},
+      title={Safe Exploitative Play with Untrusted Type Beliefs}, 
+      author={Tongxin Li, Tinashe Handina, Shaolei Ren, and Adam Wierman},
+      year={2024},
+      eprint={2402.07588},
+      archivePrefix={arXiv},
+      primaryClass={cs.GT},
+      
+}
+
 @InProceedings{pmlr-v178-christianson22a,
   selected={true},
   title = 	 {Chasing Convex Bodies and Functions with Black-Box Advice},
