updated to bibliography
updates

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,15 +1,23 @@
 ---
 ---
-@misc{handina2024understandingmodelselectionlearning,
+@inproceedings{handina2024understandingmodelselectionlearning,
       selected={true},
       title={Understanding Model Selection For Learning In Strategic Environments}, 
       author={Tinashe Handina and Eric Mazumdar},
       year={2024},
-      eprint={2402.07588},
-      archivePrefix={arXiv},
-      primaryClass={cs.GT},
+      booktitle={38th Conference on Neural Information Processing Systems (NeurIPS 2024)},
       url={https://arxiv.org/abs/2402.07588}, 
       pdf={https://arxiv.org/abs/2402.07588},
+}
+
+@inproceedings{li2024safeexploitativeplayuntrusted,
+      selected={true},
+      title={Safe Exploitative Play with Untrusted Type Beliefs}, 
+      author={Tongxin Li and Tinashe Handina and Shaolei Ren and Adam Wierman},
+      year={2024},
+      booktitle={38th Conference on Neural Information Processing Systems (NeurIPS 2024)},
+      url={https://arxiv.org/abs/2411.07679}, 
+      pdf={https://arxiv.org/abs/2411.07679},
 }
 
 @InProceedings{pmlr-v178-christianson22a,
